--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -2,37 +2,47 @@
 
 @{
     ViewData["Title"] = "Index"; // Establece el título de la página.
+    Layout = "~/Views/Shared/_MyLayout.cshtml"; /* forma para que en ves del tener el layout normal tenga el otro */
 }
 @* //estan heredando de layaout *@
-<h1>Sections</h1>
-<!-- Enlace para dirigirse a la acción 'Create' del controlador -->
+<div class="pagetitle">
+    <h1>Dashboard</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a asp-asp-controller="Home" asp-action="Dashboard">Home</a></li>
+            <li class="breadcrumb-item active">Dashboard</li>
+        </ol>
+    </nav>
+</div><!-- End Page Title -->
 
-<table class="table">
-    <thead>
-        <tr>
-            
-            <!--
-                Esta línea genera un encabezado de columna de una tabla para el nombre.
-                Html.DisplayNameFor(model => model.Name) utiliza la reflexión para obtener el nombre de la propiedad "Name" del modelo.
-                Esto permite mostrar el nombre legible de la propiedad, definido mediante DataAnnotations, en lugar del nombre exacto de la propiedad.
-            -->
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.LastName)</th>
-            <th>@Html.DisplayNameFor(model => model.StageName)</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<section class="section dashboard">
+    <table class="table">
+        <thead>
             <tr>
-                
-                <td>@Html.DisplayFor(modelItem => @item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => @item.LastName)</td>
-                <td>@Html.DisplayFor(modelItem => @item.StageName)</td>
 
-
+                <!--
+                    Esta línea genera un encabezado de columna de una tabla para el nombre.
+                    Html.DisplayNameFor(model => model.Name) utiliza la reflexión para obtener el nombre de la propiedad "Name" del modelo.
+                    Esto permite mostrar el nombre legible de la propiedad, definido mediante DataAnnotations, en lugar del nombre exacto de la propiedad.
+                -->
+                <th>@Html.DisplayNameFor(model => model.Name)</th>
+                <th>@Html.DisplayNameFor(model => model.LastName)</th>
+                <th>@Html.DisplayNameFor(model => model.StageName)</th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+
+                    <td>@Html.DisplayFor(modelItem => @item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => @item.LastName)</td>
+                    <td>@Html.DisplayFor(modelItem => @item.StageName)</td>
+
+
+                </tr>
+            }
+        </tbody>
+    </table>
+</section>
