--- a/ProyectSoftware.Web/Views/Users/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Users/Index.cshtml
@@ -2,10 +2,21 @@
 
 @{
     ViewData["Title"] = "Index"; // Establece el título de la página.
+    Layout = "~/Views/Shared/_MyLayout.cshtml"; /* forma para que en ves del tener el layout normal tenga el otro */
 }
 @* //estan heredando de layaout *@
-<h1>Sections</h1>
-<!-- Enlace para dirigirse a la acción 'Create' del controlador -->
+<div class="pagetitle">
+    <h1>Dashboard</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a asp-asp-controller="Home" asp-action="Dashboard">Home</a></li>
+            <li class="breadcrumb-item active">Dashboard</li>
+        </ol>
+    </nav>
+</div><!-- End Page Title -->
+
+<section class="section dashboard">
+</section>
 
 <table class="table">
     <thead>
