--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -16,33 +16,33 @@
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
-    <table class="table">
-        <thead>
-            <tr>
-
-                <!--
-                    Esta línea genera un encabezado de columna de una tabla para el nombre.
-                    Html.DisplayNameFor(model => model.Name) utiliza la reflexión para obtener el nombre de la propiedad "Name" del modelo.
-                    Esto permite mostrar el nombre legible de la propiedad, definido mediante DataAnnotations, en lugar del nombre exacto de la propiedad.
-                -->
-                <th>@Html.DisplayNameFor(model => model.Name)</th>
-                <th>@Html.DisplayNameFor(model => model.LastName)</th>
-                <th>@Html.DisplayNameFor(model => model.StageName)</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-
-                    <td>@Html.DisplayFor(modelItem => @item.Name)</td>
-                    <td>@Html.DisplayFor(modelItem => @item.LastName)</td>
-                    <td>@Html.DisplayFor(modelItem => @item.StageName)</td>
-
-
-                </tr>
-            }
-        </tbody>
-    </table>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Authors</h5>
+                    <!-- Table Variants -->
+                    <table class="table table-bordered">
+                        <thead class="table-primary">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.StageName)</th>
+                                <th>@Html.DisplayNameFor(model => model.Name)</th>
+                                <th>@Html.DisplayNameFor(model => model.LastName)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr class="table-secondary">
+                                    <td class="table-success">@Html.DisplayFor(modelItem => @item.Name)</td>
+                                    <td class="table-danger">@Html.DisplayFor(modelItem => @item.LastName)</td>
+                                    <td class="table-warning">@Html.DisplayFor(modelItem => @item.StageName)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <!-- End Table Variants -->
+                </div>
+            </div>
+            <!-- End Table Variants -->
 </section>
+
+    
