--- a/ProyectSoftware.Web/Views/GenderTypes/Index.cshtml
+++ b/ProyectSoftware.Web/Views/GenderTypes/Index.cshtml
@@ -16,28 +16,26 @@
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
-    </section>
-
-<table class="table">
-    <thead>
-        <tr>
-
-            <!--
-                Esta línea genera un encabezado de columna de una tabla para el nombre.
-                Html.DisplayNameFor(model => model.Name) utiliza la reflexión para obtener el nombre de la propiedad "Name" del modelo.
-                Esto permite mostrar el nombre legible de la propiedad, definido mediante DataAnnotations, en lugar del nombre exacto de la propiedad.
-            -->
-            <th>@Html.DisplayNameFor(model => model.GenderName)</th>
-            
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.GenderName)</th>
-            </tr>
-        }
-    </tbody>
-</table>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">GenderType</h5>
+            <!-- Table Variants -->
+            <table class="table table-bordered">
+                <thead class="table-primary">
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.GenderName)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr class="table-secondary">
+                            <th>@Html.DisplayNameFor(model => model.GenderName)</th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <!-- End Table Variants -->
+        </div>
+    </div>
+</section>
