--- a/ProyectSoftware.Web/Views/Users/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Users/Index.cshtml
@@ -13,39 +13,39 @@
             <li class="breadcrumb-item active">Dashboard</li>
         </ol>
     </nav>
+    
+
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Users</h5>
+            <!-- Table Variants -->
+            <table class="table table-bordered">
+                <thead class="table-primary">
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Name)</th>
+                        <th>@Html.DisplayNameFor(model => model.Password)</th>
+                        <th>@Html.DisplayNameFor(model => model.Email)</th>
+                        <th>@Html.DisplayNameFor(model => model.Edad)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr class="table-secondary">
+                            <td>@Html.DisplayFor(modelItem => @item.Name)</td>
+                            <td>@Html.DisplayFor(modelItem => @item.Password)</td>
+                            <td>@Html.DisplayFor(modelItem => @item.Email)</td>
+                            <td>@Html.DisplayFor(modelItem => @item.Edad)</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <!-- End Table Variants -->
+        </div>
+    </div>
+    <!-- End Table Variants -->
 </section>
 
-<table class="table">
-    <thead>
-        <tr>
-           
-            <!--
-                Esta línea genera un encabezado de columna de una tabla para el nombre.
-                Html.DisplayNameFor(model => model.Name) utiliza la reflexión para obtener el nombre de la propiedad "Name" del modelo.
-                Esto permite mostrar el nombre legible de la propiedad, definido mediante DataAnnotations, en lugar del nombre exacto de la propiedad.
-            -->
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Password)</th>
-            <th>@Html.DisplayNameFor(model => model.Email)</th>
-            <th>@Html.DisplayNameFor(model => model.Edad)</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-
-                <td>@Html.DisplayFor(modelItem => @item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => @item.Password)</td>
-                <td>@Html.DisplayFor(modelItem => @item.Email)</td>
-                <td>@Html.DisplayFor(modelItem => @item.Edad)</td>
-
-
-            </tr>
-        }
-    </tbody>
-</table>
