Creando boton create y descarando nugget asphero, tambien añadiendo ciertas parstes del antiguo layout al nuevo

--- a/ProyectSoftware.Web/Views/Shared/_MyLayout.cshtml
+++ b/ProyectSoftware.Web/Views/Shared/_MyLayout.cshtml
@@ -343,7 +343,9 @@
 
     <!-- Template Main JS File -->
     <script src="~/theme/js/main.js"></script>
-
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    @await Component.InvokeAsync("Notyf")
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
