--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -16,9 +16,17 @@
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
+
             <div class="card">
+                <div class="card-header py-3">
+                    <h3 class="m-0 font-weight-bold text-primary col-md-11">Authors</h3>
+                    <div>
+                        <a asp-action="Create" class="btn btn-primary">New Authors</a>
+                    </div>
+                </div>
+                    
                 <div class="card-body">
-                    <h5 class="card-title">Authors</h5>
+                    
                     <!-- Table Variants -->
                     <table class="table table-bordered">
                         <thead class="table-primary">
