--- a/ProyectSoftware.Web/Views/GenderTypes/Index.cshtml
+++ b/ProyectSoftware.Web/Views/GenderTypes/Index.cshtml
@@ -17,6 +17,14 @@
 
 <section class="section dashboard">
     <div class="card">
+        <div class="card-header py-3">
+            <h3 class="m-0 font-weight-bold text-primary col-md-11">GenderType</h3>
+            <div>
+                <a asp-action="Create" class="btn btn-primary">New GenderType</a>
+            </div>
+      </div>
+
+    <div class="card">
         <div class="card-body">
             <h5 class="card-title">GenderType</h5>
             <!-- Table Variants -->
