--- a/ProyectSoftware.Web/Views/Users/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Users/Index.cshtml
@@ -19,6 +19,13 @@
 
 <section class="section dashboard">
     <div class="card">
+        <div class="card-header py-3">
+            <h3 class="m-0 font-weight-bold text-primary col-md-11">User</h3>
+            <div>
+                <a asp-action="Create" class="btn btn-primary">New User</a>
+            </div>
+        </div>
+    <div class="card">
         <div class="card-body">
             <h5 class="card-title">Users</h5>
             <!-- Table Variants -->
