--- a/ProyectSoftware.Web/Views/Users/Create.cshtml
+++ b/ProyectSoftware.Web/Views/Users/Create.cshtml
@@ -60,7 +60,12 @@
                     </div>
                 </form><!-- End floating Labels Form -->
 
-            </div>
-        </div>
+                </div>
+            </div> 
+        </section>
 
-
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationSriptsPartial");
+    }
+}
