ajuste a sidebarmenu y create tube que comnetar el section script ya que generaba error

--- a/ProyectSoftware.Web/Views/Authors/Create.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Create.cshtml
@@ -29,12 +29,12 @@
                     </div>
                 <div class="form-floating">
                     <input asp-for="LastName" class="form-control" placeholder="@Html.DisplayFor(model => model.LastName)">
-                    <label>@(Html.DisplayFor(model => model.LastName)) LastName </label>
+                <label>@(Html.DisplayNameFor(model => model.LastName)) LastName </label>
                     <span asp-validation-for="LastName" class="Text-Danger"></span>
                 </div>
                 <div class="form-floating">
                     <input asp-for="StageName" class="form-control" placeholder="@Html.DisplayFor(model => model.StageName)">
-                    <label>@(Html.DisplayFor(model => model.StageName)) StageName </label>
+            <label>@(Html.DisplayNameFor(model => model.StageName)) StageName </label>
                     <span asp-validation-for="StageName" class="Text-Danger"></span>
                 </div>
                 
@@ -42,8 +42,8 @@
 </section>
 
 
-@section Scripts {
+@* @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationSriptsPartial");
     }
-}
+} *@
