--- a/ProyectSoftware.Web/Views/Users/Create.cshtml
+++ b/ProyectSoftware.Web/Views/Users/Create.cshtml
@@ -28,28 +28,28 @@
                     <div class="col-md-12">
                         <div class="form-floating">
                             <input asp-for="Name" class="form-control" placeholder="@Html.DisplayFor(model => model.Name)">
-                            <label>@(Html.DisplayFor(model => model.Name)) Name </label>
+                        <label>@(Html.DisplayNameFor(model => model.Name)) Name </label>
                             <span asp-validation-for="Name" class="Text-Danger"></span>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating">
                         <input asp-for="Email" class="form-control" placeholder="@Html.DisplayFor(model => model.Email)">
-                        <label>@(Html.DisplayFor(model => model.Email)) Email </label>
+                        <label>@(Html.DisplayNameFor(model => model.Email)) Email </label>
                         <span asp-validation-for="Email" class="Text-Danger"></span>
                         </div>
                         </div>
                     <div class="col-md-6">
                         <div class="form-floating">
                         <input asp-for="Password" class="form-control" placeholder="@Html.DisplayFor(model => model.Password)">
-                        <label>@(Html.DisplayFor(model => model.Password)) Password </label>
+                        <label>@(Html.DisplayNameFor(model => model.Password)) Password </label>
                         <span asp-validation-for="Password" class="Text-Danger"></span>
                         </div>
                     </div>
                 <div class="col-md-6">
                     <div class="form-floating">
                         <input asp-for="Edad" class="form-control" placeholder="@Html.DisplayFor(model => model.Edad)">
-                        <label>@(Html.DisplayFor(model => model.Edad)) Edad </label>
+                        <label>@(Html.DisplayNameFor(model => model.Edad)) Edad </label>
                         <span asp-validation-for="Edad" class="Text-Danger"></span>
                     </div>
                 </div>
@@ -64,8 +64,8 @@
             </div> 
         </section>
 
-@section Scripts {
+@* @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationSriptsPartial");
     }
-}
+} *@
