Creacion del Crud Completo de GenderType (Controller,Services,views) tambien agregando el link para que sirva el delete

--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -16,14 +16,13 @@
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
-
-            <div class="card">
-                <div class="card-header py-3">
-                    <h3 class="m-0 font-weight-bold text-primary col-md-11">Authors</h3>
-                    <div>
-                        <a asp-action="Create" class="btn btn-primary">New Authors</a>
-                    </div>
-                </div>
+    <div class="card">
+        <div class="card-header py-3">
+            <h3 class="m-0 font-weight-bold text-primary col-md-11">Author</h3>
+            <div>
+                <a asp-action="Create" class="btn btn-primary">New Author</a>
+            </div>
+        </div>
                     
                 <div class="card-body">
                     
