--- a/ProyectSoftware.Web/Views/Authors/Create.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Create.cshtml
@@ -37,7 +37,10 @@
             <label>@(Html.DisplayNameFor(model => model.StageName)) StageName </label>
                     <span asp-validation-for="StageName" class="Text-Danger"></span>
                 </div>
-                
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <a asp-action="Index" class="btn btn-secondary">return</a>
+            </div>
             </form>
 </section>
 
