--- a/ProyectSoftware.Web/Views/Shared/_Scripts.cshtml
+++ b/ProyectSoftware.Web/Views/Shared/_Scripts.cshtml
@@ -11,3 +11,4 @@
 <!-- Template Main JS File -->
 <script src="~/theme/js/main.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
