--- a/ProyectSoftware.Web/Views/Authors/Create.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Create.cshtml
@@ -32,11 +32,11 @@
                 <label>@(Html.DisplayNameFor(model => model.LastName)) LastName </label>
                     <span asp-validation-for="LastName" class="Text-Danger"></span>
                 </div>
-                <div class="form-floating">
+                @* <div class="form-floating">
                     <input asp-for="StageName" class="form-control" placeholder="@Html.DisplayFor(model => model.StageName)">
             <label>@(Html.DisplayNameFor(model => model.StageName)) StageName </label>
                     <span asp-validation-for="StageName" class="Text-Danger"></span>
-                </div>
+                </div> *@
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <a asp-action="Index" class="btn btn-secondary">return</a>
