--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -42,6 +42,16 @@
                                     <td class="table-success">@Html.DisplayFor(modelItem => @item.Name)</td>
                                     <td class="table-danger">@Html.DisplayFor(modelItem => @item.LastName)</td>
                                     <td class="table-warning">@Html.DisplayFor(modelItem => @item.StageName)</td>
+                                <td>
+                                <a class="btn btn-warning" asp-action="Edit" asp-route-stagename="@item.StageName"><i class="bi bi-pencil-fill"></i></a>
+                                    @*  esta llamando a delete de controller *@
+                                <form asp-action="Delete" asp-route-stagename="@item.StageName" style="display:contents">
+                                        <button asp-action="Delete"
+                                            asp-route-stagename="@item.StageName" class="btn btn-sm btn-danger btnDelete">
+                                            <i class="bi bi-trash"></i>
+                                        </button>
+                                    </form>
+                                </td>
                                 </tr>
                             }
                         </tbody>
@@ -52,4 +62,31 @@
             <!-- End Table Variants -->
 </section>
 
-    
+@section Scripts {
+    <script>
+        // Función que se ejecuta cuando el documento HTML ha sido completamente cargado
+        $(document).ready(function () {
+            // Selecciona todos los elementos con la clase 'btnDelete' y define un evento 'click' para ellos
+            $('.btnDelete').click(function (event) {
+                // Evita el comportamiento predeterminado del botón (enviar el formulario)
+                event.preventDefault();
+                // Muestra un cuadro de diálogo de confirmación utilizando SweetAlert2
+                Swal.fire({
+                    title: "¿Desea eliminar el Author?",
+                    text: "No prodrá revertirlo",
+                    icon: "question",
+                    showCancelButton: true,
+                }).then((result) => {// Si el usuario confirma la eliminación
+
+                    if (result.isConfirmed) {
+                        // Encuentra el formulario más cercano al botón de eliminación y lo envía
+                        const form = $(this).closest('form');
+                        form.submit();// Envía el formulario. Si el usuario confirmó la eliminación, el formulario se envía y el autor se eliminará del servidor.
+                    }
+                });
+
+            });
+        });
+
+    </script>
+}
