--- a/ProyectSoftware.Web/Views/Shared/_Header.cshtml
+++ b/ProyectSoftware.Web/Views/Shared/_Header.cshtml
@@ -213,7 +213,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
+                        <a class="dropdown-item d-flex align-items-center" asp-controller="Account" asp-action="Logout">
                             <i class="bi bi-box-arrow-right"></i>
                             <span>Sign Out</span>
                         </a>
