Creando el crud de roles y se soluciono el problema de perfil ya que el Helper Iconverter no estaba, ahora el problema seria que no se muestra

--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ProyectSoftware.Web.Data.Entities.Author>
+@inject ProyectSoftware.Web.Services.IUsersService _usersService
 
 @{
     ViewData["Title"] = "Index"; // Establece el título de la página.
