Se reolvio unos problemas con el profe pero hay otros que se generaron tengo nota sobre esos errores

--- a/ProyectSoftware.Web/Views/GenderTypes/Index.cshtml
+++ b/ProyectSoftware.Web/Views/GenderTypes/Index.cshtml
@@ -42,7 +42,7 @@
                     @foreach (var item in Model)
                     {
                         <tr class="table-secondary">
-                            <td>@Html.DisplayNameFor(model => model.GenderName)</td>
+                            <td>@item.GenderName</td>
                                 <td>
                                     @if (await _usersService.CurrentUserIsAuthorizedAsync("updateGenderTypes", "GenderTypes"))
                                     {
