--- a/ProyectSoftware.Web/Views/Authors/Create.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Create.cshtml
@@ -32,7 +32,7 @@
                 <label>@(Html.DisplayNameFor(model => model.LastName)) LastName </label>
                     <span asp-validation-for="LastName" class="Text-Danger"></span>
                 </div>
-                @* <div class="form-floating">
+               @*  <div class="form-floating">
                     <input asp-for="StageName" class="form-control" placeholder="@Html.DisplayFor(model => model.StageName)">
             <label>@(Html.DisplayNameFor(model => model.StageName)) StageName </label>
                     <span asp-validation-for="StageName" class="Text-Danger"></span>
@@ -45,8 +45,8 @@
 </section>
 
 
-@* @section Scripts {
+@section Scripts {
     @{
-        await Html.RenderPartialAsync("_ValidationSriptsPartial");
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-} *@
+}
