--- a/ProyectSoftware.Web/Views/Authors/Edit.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Edit.cshtml
@@ -57,3 +57,8 @@
         </div>
     </div>
 </section>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
