--- a/ProyectSoftware.Web/Views/Authors/Index.cshtml
+++ b/ProyectSoftware.Web/Views/Authors/Index.cshtml
@@ -28,14 +28,14 @@
             </div> 
         }
 
-        
-                    
+       
                 <div class="card-body">
                     
                     <!-- Table Variants -->
                     <table class="table table-bordered">
                         <thead class="table-primary">
                             <tr>
+                                
                                 <th>@Html.DisplayNameFor(model => model.StageName)</th>
                                 <th>@Html.DisplayNameFor(model => model.Name)</th>
                                 <th>@Html.DisplayNameFor(model => model.LastName)</th>
@@ -45,9 +45,9 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="table-secondary">
+                                    <td class="table-warning">@Html.DisplayFor(modelItem => @item.StageName)</td>
                                     <td class="table-success">@Html.DisplayFor(modelItem => @item.Name)</td>
                                     <td class="table-danger">@Html.DisplayFor(modelItem => @item.LastName)</td>
-                                    <td class="table-warning">@Html.DisplayFor(modelItem => @item.StageName)</td>
                                 <td>
                                 @if (await _usersService.CurrentUserIsAuthorizedAsync("updateAuthors", "Authors"))
                                 {
@@ -58,12 +58,13 @@
                                
                                 @if (await _usersService.CurrentUserIsAuthorizedAsync("deleteAuthors", "Authors"))
                                 {
-                                    <form asp-action="Delete" asp-route-stagename="@item.StageName" style="display:contents">
-                                        <button asp-action="Delete"
-                                            asp-route-stagename="@item.StageName" class="btn btn-sm btn-danger btnDelete">
+                                    <form asp-action="Delete" asp-route-StageName="@item.StageName" style="display:contents" method="post">
+                                        <input type="hidden" name="StageName" value="@item.StageName" />
+                                        <button
+                                            class="btn btn-sm btn-danger btnDelete">
                                             <i class="bi bi-trash"></i>
                                         </button>
-                                    </form>
+                                    </form >
                                 }
                                 </td>
                                 </tr>
