--- a/ProyectSoftware.Web/Views/GenderTypes/Create.cshtml
+++ b/ProyectSoftware.Web/Views/GenderTypes/Create.cshtml
@@ -42,8 +42,8 @@
     </div>
 </section>
 
-@* @section Scripts{
+@section Scripts {
     @{
-        await Html.RenderPartialAsync("_ValidationSriptsPartial");
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-} *@
+}
