--- a/ProyectSoftware.Web/Views/GenderTypes/Edit.cshtml
+++ b/ProyectSoftware.Web/Views/GenderTypes/Edit.cshtml
@@ -23,7 +23,7 @@
             <h5 class="card-title">Edit GenderType</h5>
 
             <!-- Floating Labels Form -->
-            <form class="row g-3" asp-action="Update" method="POST">
+            <form class="row g-3" asp-action="Edit" method="POST">
             <input type="hidden" asp-for="Id" />
 
 
@@ -45,8 +45,8 @@
     </div>
 </section>
 
-@* @section Scripts{
+@section Scripts {
     @{
-        await Html.RenderPartialAsync("_ValidationSriptsPartial");
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-} *@
+}
