hecho el crud de eliminar rol

--- a/ProyectSoftware.Web/Views/Shared/_SidebarMenu.cshtml
+++ b/ProyectSoftware.Web/Views/Shared/_SidebarMenu.cshtml
@@ -13,46 +13,50 @@
             </a>
 
         </li><!-- End Dashboard Nav -->
-        @if (await _usersService.CurrentUserIsAuthorizedAsync("showGenderTypes", "GenderTypes") 
-        || await _usersService.CurrentUserIsAuthorizedAsync("showAuthors", "Authors")
-        || await _usersService.CurrentUserIsAuthorizedAsync("showRoles", "Roles"))
-        {
-            <li class="nav-item">
-                <!-- creando una conexcion con author-->
-                <a class="nav-link @(ViewContext.RouteData.Values["Controller"].ToString() == "Auhors"
-               && ViewContext.RouteData.Values["Action"].ToString() == "Index"
-               ? "" : "collapsed")" asp-controller="Authors" asp-action="Index">
-                    <i class="bi bi-puzzle"></i>
-                    <span>Author</span>
-                </a>
-            </li>
-
+            @if (await _usersService.CurrentUserIsAuthorizedAsync("showAuthors", "Authors"))
+            {
+                <li class="nav-item">
+                    <!-- creando una conexcion con author-->
+                    <a class="nav-link @(ViewContext.RouteData.Values["Controller"].ToString() == "Auhors"
+                   && ViewContext.RouteData.Values["Action"].ToString() == "Index"
+                   ? "" : "collapsed")" asp-controller="Authors" asp-action="Index">
+                        <i class="bi bi-puzzle"></i>
+                        <span>Author</span>
+                    </a>
+                </li>
+            }
             <!-- End Author Nav -->
-
-            <li class="nav-item">
-                <!-- creando una conexcion con author-->
-                <a class="nav-link @(ViewContext.RouteData.Values["Controller"].ToString() == "GenderTypes"
+            @if (await _usersService.CurrentUserIsAuthorizedAsync("showGenderTypes", "GenderTypes"))
+            {
+                <li class="nav-item">
+                    <!-- creando una conexcion con author-->
+                    <a class="nav-link @(ViewContext.RouteData.Values["Controller"].ToString() == "GenderTypes"
                && ViewContext.RouteData.Values["Action"].ToString() == "Index"
                ? "" : "collapsed")" asp-controller="GenderTypes" asp-action="Index">
-                    <i class="bi bi-puzzle"></i>
-                    <span>GenderType</span>
-                </a>
-            </li>
+                        <i class="bi bi-puzzle"></i>
+                        <span>GenderType</span>
+                    </a>
+                </li>
+            }
+            
 
             <!-- End GenderTypes Nav -->
-
-            <li class="nav-item">
-                <!-- creando una conexcion con author-->
-                <a class="nav-link @(ViewContext.RouteData.Values["Controller"].ToString() == "Roles"
+            @if (await _usersService.CurrentUserIsAuthorizedAsync("showRoles", "Roles"))
+            {
+                <li class="nav-item">
+                    <!-- creando una conexcion con author-->
+                    <a class="nav-link @(ViewContext.RouteData.Values["Controller"].ToString() == "Roles"
                && ViewContext.RouteData.Values["Action"].ToString() == "Index"
                ? "" : "collapsed")" asp-controller="Roles" asp-action="Index">
-                    <i class="bi bi-puzzle"></i>
-                    <span>Roles</span>
-                </a>
-            </li>
+                        <i class="bi bi-puzzle"></i>
+                        <span>Roles</span>
+                    </a>
+                </li>
 
-            <!-- End Dashboard Nav -->
-        }
+                <!-- End Dashboard Nav -->
+            }
+            
+        
 
     </ul>
 
