--- a/ProyectSoftware.Web/Views/_ViewImports.cshtml
+++ b/ProyectSoftware.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ProyectSoftware.Web
 @using ProyectSoftware.Web.Models
+@using ProyectSoftware.Web.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
